--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,38 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    ext {
+        gradle_version = '3.5.3'
+        kotlin_version = '1.3.50'
+        nav_version = "2.3.0-alpha02"
+        lifecycle_version = "2.2.0"
+        arch_version = "2.1.0"
+
+        rxjava2 = "2.1.3"
+        rxjava2ext = "0.20.10"
+        rx_android = "2.0.1"
+
+        koin_version = '2.1.4'
+        paging_version = '3.0.0-alpha01'
+
+        glide_version = '4.9.0'
+        retrofit_version = '2.3.0'
+
+        coroutines_version = '1.3.5'
+        material_version = '1.2.0-alpha01'
+
+        biometric_version= '1.0.0-rc02'
+    }
+
     ext.kotlin_version = "1.3.72"
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.0.0"
+        classpath "com.android.tools.build:gradle:3.5.3"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
+        classpath "org.koin:koin-gradle-plugin:$koin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
