add jitpack maven

--- a/android_extensions/build.gradle
+++ b/android_extensions/build.gradle
@@ -3,6 +3,8 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: "androidx.navigation.safeargs"
 apply plugin: "kotlin-kapt"
+apply plugin: 'com.github.dcendents.android-maven'
+group='com.github.dattien96'
 
 android {
     compileSdkVersion 29
